--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Bootstrap Landing Page</title>
-</head>
-<body>
-
-</body>
-</html>
+  </head >
+  <body >
+  <div class =" container ">
+  <h1 > Hello World </h1 >
+  </div >
+  </body >
+  </html >
